Version 7.2. 15 January 2019 - Neula edition


Improved menu environment:
* Added new menu window type: ZX Vision. GUI Windows can be moved, resized, scrolled, minimized, closed, and change the focus to the background
* Windows can be scrolled using mouse wheel
* Warning and Error window messages now show an animation
* Added first-aid help windows

Added Z80 assembler
Added setting to specify configuration file
Added key to save text windows contents to a file
Added setting to send a final space after every word in the osd adventure keyboard
Added Dandanator CPC emulation
Added machine Amstrad CPC 4128
Added CPC machines support to ZSF snapshots
Added tape to wav converter (tap, tzx, o, p to wav)

Improved ZRCP:
-commands smartload and snapshot-load are more intelligent now
-running in verbose or limit mode, or cpu-step command, can now update the display inmediately (having real video setting on)
-added commands: get-cpu-frequency, get-cpu-turbo-speed, get-tstates, get-tstates-partial, reset-tstates-partial

Improved vu-meters: high volumes are shown in red
Improved sprite viewer: you can view sprites up to 512x512

Improved file selector:
*now it remembers the last files used
*Windows: now you can use up to 20000 files in the same directory
*Windows: added drive selector (press shift-u)

Improved audio: silence detector is disabled by default. That should fix some Windows audio problems. Check Settings->Audio->Silence detector if you have configuration autosaving enabled

Improved disassemble window: 
*now you can export the disassemble to text file
*you can now see the full opcode when debugging Sinclair QL
*you can now show/hide hexadecimal dump of every opcode

Improved hexadecimal editor:
*now showing subzones information

Fixed visual glitches in some menus when Pentagon machine and real video: audio wave, visualmem, ay piano, wave piano, view sprites